# NBodyProblem

./: BUILDING.md  CMakeLists.txt  INDEX.md  LEVEL1_BRUTE_FORCE.md  LEVEL2_DATA_ORIENTED.md  LEVEL3_BARNES_HUT.md  LEVEL4_SIMD_THREADING.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  RESULTS.txt  SETUP.md  VISUAL_GUIDE.md  build.bat  build.py  build.sh  build_simple.bat
include/: benchmark.h  nbody.h  particle.h  simd_nbody.h
src/: basic_nbody.cpp  benchmark.cpp  main.cpp  octree.cpp  optimized_nbody.cpp  simd_nbody.cpp
